dev:
  * add option to use coda normalization, no inversion for site effects and event spectra in this case
  * add option to not perform optimization, but only invert for b ("optimize": null)
  * add 2 Greens functions for 3d diffusion approximation, one for exact diffusion and one usable for determining coda Q within Qopen
  * add debug option (--pdb)
  * allow more fine grained control of plot file names with str.format method
  * use viridis_r cmap instead of hot_r cmap by default
  * type of cmap can now be set with the config
  * indicate number of observations with color in source displacement spectrum plots
  * fix bug when using newly introduced figsize and dpi options
v2.6:
  * add dpi and figsize options for all plots (alternatively use a matplotlibrc file)
  * fix spelling error in invert_events_simultaneously (has to be fixed in old configuration files
    if these are used with new qopen version)
  * fix error when plotting site effects for simultaneously inverted events and present None values
  * fix wrong offset in optimization plots for simultaneously inverted events
v2.5:
  * add official support for python 3.7 and 3.8
v2.4:
  * Qopen can now be used on Windows, tests are passing,
    but multiprocessing is probably not yet working (see issue #3)
v2.3:
  * add Green's function for 2d and 1d radiative transfer
  * changed "G_module" config option to "G_plugin"
  * changed default tolerance for "optimize" config option
  * fix plotting error if events are inverted simultaneously
  * fix error when frequencies are given by fbands parameter
  * fix error when fitting source model to sds if gamma is not fixed
  * fix annotation of sds plot
v2.2:
  * use multiprocessing instead of joblib for parallel processing
  * remove joblib as hard dependency, it is only needed for waveform caching
  * fix: averaging did not work when v0 was determined by picks
v2.1: