@@ -3,11 +3,16 @@ dev:
   * add option to not perform optimization, but only invert for b ("optimize": null)
   * add 2 Greens functions for 3d diffusion approximation, one for exact diffusion and one usable for determining coda Q within Qopen
   * add debug option (--pdb)
-  * allow more fine grained control of plot file names with str.format method
   * use viridis_r cmap instead of hot_r cmap by default
   * type of cmap can now be set with the config
   * indicate number of observations with color in source displacement spectrum plots
+  * allow more fine grained control of plot file names with str.format method
+  * do not plot or calculate b and g0 for --fix-params, --align-sites and --calc-source-params,
+    this fixes a bug when using --fix-params with robust mean
   * fix bug when using newly introduced figsize and dpi options
+  * fix NaN values in json output (are converted to None aka null)
+  * fix warning due to conversion of masked values to nan in gmean
+  * add label with excluded stations in sites.pdf
 v2.6:
   * add dpi and figsize options for all plots (alternatively use a matplotlibrc file)
   * fix spelling error in invert_events_simultaneously (has to be fixed in old configuration files
